force-app/main/default/objects/VolunteerAssignment__c/fields/VolunteerActivityPosition__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivityPosition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Activity Position</label>
    <referenceTo>VolunteerActivityPosition__c</referenceTo>
    <relationshipLabel>Volunteer Assignments</relationshipLabel>
    <relationshipName>VolunteerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>