force-app/main/default/objects/VolunteerAssignment__c/fields/VolunteerContact__c.field-meta.xml
<CustomField>
    <fullName>VolunteerContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Assignments</relationshipLabel>
    <relationshipName>VolunteerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>