force-app/main/default/objects/VolunteerAssignment__c/fields/VolunteerShift__c.field-meta.xml
<CustomField>
    <fullName>VolunteerShift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Shift</label>
    <referenceTo>VolunteerShift__c</referenceTo>
    <relationshipLabel>Volunteer Assignments</relationshipLabel>
    <relationshipName>VolunteerAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>